--- a/plugins/protocol-vk/plugin.xml
+++ b/plugins/protocol-vk/plugin.xml
@@ -25,8 +25,13 @@
         <library name="protocol-vk.jar">
             <export name="*"/>
         </library>
-        <library name="spring-social-core-1.1.0.BUILD-SNAPSHOT.jar"/>
-        <library name="spring-social-vkontakte-1.1.0.BUILD-SNAPSHOT.jar"/>
+        <library name="spring-social-core-1.1.0.BUILD-20140630.081822-755.jar"/>
+        <library name="spring-social-vkontakte-1.1.0.BUILD-20150810.103921-19.jar"/>
+        <library name="spring-web-4.0.3.RELEASE.jar"/>
+        <library name="spring-core-4.0.3.RELEASE.jar"/>
+        <library name="spring-beans-4.0.3.RELEASE.jar"/>
+
+        <library name="gson-2.4.jar"/>
     </runtime>
 
     <requires>
