--- a/pom.xml
+++ b/pom.xml
@@ -171,5 +171,6 @@
 
     <modules>
         <module>plugins/protocol-vk</module>
+        <module>plugins/parse-vk</module>
     </modules>
 </project>
