--- a/plugins/protocol-vk/plugin.xml
+++ b/plugins/protocol-vk/plugin.xml
@@ -30,6 +30,7 @@
         <library name="spring-web-4.0.3.RELEASE.jar"/>
         <library name="spring-core-4.0.3.RELEASE.jar"/>
         <library name="spring-beans-4.0.3.RELEASE.jar"/>
+        <library name="lib-vk-1.0.0.jar"/>
 
         <library name="gson-2.4.jar"/>
     </runtime>
