add 'vk-lib' dependency to vk-parser

--- a/plugins/parse-vk/plugin.xml
+++ b/plugins/parse-vk/plugin.xml
@@ -9,6 +9,7 @@
         <library name="parse-vk.jar">
             <export name="*"/>
         </library>
+        <library name="lib-vk-1.0.0.jar"/>
     </runtime>
 
     <extension id="org.apache.nutch.parse.vk"
