--- a/plugins/lib-vk/pom.xml
+++ b/plugins/lib-vk/pom.xml
@@ -46,6 +46,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-vkontakte</artifactId>
             <version>1.1.0.BUILD-SNAPSHOT</version>
