--- a/plugins/protocol-vk/plugin.xml
+++ b/plugins/protocol-vk/plugin.xml
@@ -19,25 +19,17 @@
         id="protocol-vk"
         name="vk.com Protocol Plug-in"
         version="1.0.0"
-        provider-name="nutch.org">
+        provider-name="wobot.ru">
 
     <runtime>
         <library name="protocol-vk.jar">
             <export name="*"/>
         </library>
-        <library name="spring-social-core-1.1.0.BUILD-20140630.081822-755.jar"/>
-        <library name="spring-social-vkontakte-1.1.0.BUILD-20150810.103921-19.jar"/>
-        <library name="spring-web-4.0.3.RELEASE.jar"/>
-        <library name="spring-core-4.0.3.RELEASE.jar"/>
-        <library name="spring-beans-4.0.3.RELEASE.jar"/>
-        <library name="lib-vk-1.0.0.jar"/>
-
-        <library name="gson-2.4.jar"/>
-    </runtime>
+   </runtime>
 
     <requires>
         <import plugin="nutch-extensionpoints"/>
-        <import plugin="lib-http"/>
+        <import plugin="lib-vk"/>
     </requires>
 
     <extension id="org.apache.nutch.protocol.vk"
