--- a/plugins/lib-vk/plugin.xml
+++ b/plugins/lib-vk/plugin.xml
@@ -15,7 +15,7 @@
         <library name="spring-social-core-1.1.0.BUILD-20140630.081822-755.jar">
             <export name="*"/>
         </library>
-        <library name="spring-social-vkontakte-1.1.0.BUILD-20150810.103921-19.jar">
+        <library name="spring-social-vkontakte-1.2.0.BUILD-SNAPSHOT.jar">
             <export name="*"/>
         </library>
         <library name="spring-web-4.0.3.RELEASE.jar">
