add multielastic indexer plugin. copy-paste(from nutch-1.10 sources) indexer-elastic plugin

--- a/pom.xml
+++ b/pom.xml
@@ -173,5 +173,6 @@
         <module>plugins/protocol-vk</module>
         <module>plugins/parse-vk</module>
         <module>plugins/lib-vk</module>
+        <module>plugins/indexer-multielastic</module>
     </modules>
 </project>
