--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <description>
         Parent module for Wobot Apache Nutch custom modules
     </description>
-    <url>https://github.com/wobot-next/wonutch</url>
+    <url>https://github.com/wobot-ru/wonutch</url>
 
     <organization>
         <name>Wobot</name>
@@ -21,7 +21,7 @@
     </organization>
 
     <scm>
-        <url>https://github.com/wobot-next/wonutch</url>
+        <url>https://github.com/wobot-ru/wonutch</url>
     </scm>
 
     <developers>
@@ -163,8 +163,8 @@
     <distributionManagement>
         <repository>
             <id>central</id>
-            <name>libs-release</name>
-            <url>http://localhost:8081/artifactory/libs-release-local</url>
+            <name>libs-release-local</name>
+            <url>http://artifactory.wobot.local/artifactory/libs-release-local</url>
         </repository>
     </distributionManagement>
 
