--- a/plugins/indexer-multielastic/pom.xml
+++ b/plugins/indexer-multielastic/pom.xml
@@ -34,6 +34,7 @@
             <groupId>ru.wobot</groupId>
             <artifactId>lib-vk</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
