--- a/plugins/protocol-vk/pom.xml
+++ b/plugins/protocol-vk/pom.xml
@@ -23,6 +23,7 @@
             <groupId>ru.wobot</groupId>
             <artifactId>lib-vk</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
