--- a/plugins/lib-vk/pom.xml
+++ b/plugins/lib-vk/pom.xml
@@ -20,6 +20,7 @@
 
     <properties>
         <gson.version>2.4</gson.version>
+        <httpclient.version>4.3.1</httpclient.version>
     </properties>
 
     <repositories>
