--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.wobot</groupId>
+    <parent>
+        <groupId>ru.wobot</groupId>
     <artifactId>wonutch-plugins</artifactId>
     <version>0.0.1</version>
+    </parent>
+
+    <artifactId>wonutch</artifactId>
     <packaging>pom</packaging>
 
     <name>wonutch-plugins</name>
