--- a/pom.xml
+++ b/pom.xml
@@ -120,11 +120,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.6</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>ru.wobot</groupId>
+                        <artifactId>distribution</artifactId>
+                        <version>0.0.1</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <finalName>${project.name}</finalName>
-                    <descriptors>
-                        <descriptor>assembly.xml</descriptor>
-                    </descriptors>
+                    <descriptorRefs>
+                        <descriptorRef>distribution</descriptorRef>
+                    </descriptorRefs>
                     <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
@@ -138,7 +145,9 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
                 <executions>
                     <execution>
                         <phase>install</phase>
@@ -146,12 +155,12 @@
                             <goal>run</goal>
                         </goals>
                         <configuration>
-                            <tasks>
-                                <copy todir="${NUTCH_HOME}/plugins/${project.name}">
+                            <target>
+                                <copy todir="${env.NUTCH_HOME}/plugins/${project.name}">
                                     <fileset dir="${project.build.directory}/${project.name}" includes="**"/>
                                 </copy>
-                                <delete dir="${NUTCH_HOME}/plugins/${project.parent.artifactId}"/>
-                            </tasks>
+                                <delete dir="${env.NUTCH_HOME}/plugins/${project.parent.artifactId}"/>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
@@ -182,5 +191,6 @@
         <module>plugins/parse-vk</module>
         <module>plugins/lib-vk</module>
         <module>plugins/indexer-multielastic</module>
+        <module>distribution</module>
     </modules>
 </project>
