--- a/plugins/indexer-multielastic/plugin.xml
+++ b/plugins/indexer-multielastic/plugin.xml
@@ -45,6 +45,7 @@
 
   <requires>
     <import plugin="nutch-extensionpoints" />
+    <import plugin="lib-vk"/>
   </requires>
 
   <extension id="org.apache.nutch.indexer.multielastic"
