--- a/plugins/indexer-multielastic/pom.xml
+++ b/plugins/indexer-multielastic/pom.xml
@@ -36,6 +36,16 @@
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.wobot</groupId>
+            <artifactId>parse-vk</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.wobot</groupId>
+            <artifactId>parse-vk</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
