--- a/plugins/lib-vk/plugin.xml
+++ b/plugins/lib-vk/plugin.xml
@@ -12,22 +12,21 @@
         <library name="gson-2.4.jar">
             <export name="*"/>
         </library>
-        <!--library name="spring-social-core-1.1.0.BUILD-20140630.081822-755.jar">
-            <export name="*"/>
-        </library-->
         <library name="spring-social-vkontakte-1.1.0.BUILD-SNAPSHOT.jar">
             <export name="*"/>
         </library>
-        <!--library name="spring-web-4.0.3.RELEASE.jar">
+        <library name="spring-social-core-1.1.4.RELEASE.jar">
             <export name="*"/>
         </library>
-
-        <library name="spring-core-4.0.3.RELEASE.jar">
+        <library name="spring-web-4.1.8.RELEASE.jar">
             <export name="*"/>
         </library>
-        <library name="spring-beans-4.0.3.RELEASE.jar">
+        <library name="spring-core-4.1.8.RELEASE.jar">
             <export name="*"/>
-        </library-->
+        </library>
+        <library name="spring-beans-4.1.8.RELEASE.jar">
+            <export name="*"/>
+        </library>
     </runtime>
 
 </plugin>
