--- a/plugins/indexer-multielastic/pom.xml
+++ b/plugins/indexer-multielastic/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>1.4.1</version>
+            <version>${elastic.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
