--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>ru.wobot</groupId>
+    <groupId>ru.wobot</groupId>
     <artifactId>wonutch-plugins</artifactId>
     <version>0.0.1</version>
-    </parent>
-
-    <artifactId>wonutch</artifactId>
     <packaging>pom</packaging>
 
     <name>wonutch-plugins</name>
@@ -53,6 +49,7 @@
         <slf4j.version>1.7.12</slf4j.version>
         <hadoop.version>2.7.1</hadoop.version>
         <nutch.version>1.10</nutch.version>
+        <elastic.version>1.4.1</elastic.version>
     </properties>
 
     <dependencies>
