--- a/plugins/indexer-multielastic/build.xml
+++ b/plugins/indexer-multielastic/build.xml
@@ -17,6 +17,17 @@
 -->
 <project name="indexer-multielastic" default="jar-core">
 
-  <import file="../build-plugin.xml" />
+    <import file="../build-plugin.xml"/>
 
+    <!-- Build compilation dependencies -->
+    <target name="deps-jar">
+        <ant target="jar" inheritall="false" dir="../lib-vk"/>
+    </target>
+
+    <!-- Add compilation dependencies to classpath -->
+    <path id="plugin.deps">
+        <fileset dir="${nutch.root}/build">
+            <include name="**/lib-vk/*.jar"/>
+        </fileset>
+    </path>
 </project>
