--- a/plugins/lib-vk/plugin.xml
+++ b/plugins/lib-vk/plugin.xml
@@ -27,6 +27,12 @@
         <library name="spring-beans-4.1.8.RELEASE.jar">
             <export name="*"/>
         </library>
+        <library name="httpclient-4.3.6.jar">
+            <export name="*"/>
+        </library>
+        <library name="httpcore-4.3.3.jar">
+            <export name="*"/>
+        </library>
     </runtime>
 
 </plugin>
