--- a/plugins/lib-vk/pom.xml
+++ b/plugins/lib-vk/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>spring-social-vkontakte</artifactId>
             <version>1.1.0.BUILD-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
