--- a/plugins/lib-vk/ivy.xml
+++ b/plugins/lib-vk/ivy.xml
@@ -38,6 +38,7 @@
   <dependencies>
     <!-- begin gson dependencies -->
     <dependency org="com.google.code.gson" name="gson" rev="2.4" />
+    <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.3.6" />
     <dependency org="org.springframework.social" name="spring-social-vkontakte" rev="1.1.0.BUILD-SNAPSHOT" />
   </dependencies>
   
