WB-26. Copy paste indexer-multielastic2.

--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,7 @@
         <module>plugins/parse-vk</module>
         <module>plugins/lib-vk</module>
         <module>plugins/indexer-multielastic</module>
+        <module>plugins/indexer-multielastic2</module>
         <module>distribution</module>
     </modules>
 </project>
