--- a/plugins/indexer-multielastic2/plugin.xml
+++ b/plugins/indexer-multielastic2/plugin.xml
@@ -16,43 +16,59 @@
   limitations under the License.
 -->
 <plugin id="indexer-multielastic2" name="MultiElastic2IndexWriter" version="1.0.0"
-  provider-name="nutch.apache.org">
+        provider-name="nutch.apache.org">
 
-  <runtime>
-    <library name="indexer-multielastic2.jar">
-      <export name="*" />
-    </library>
-    
-    <library name="elasticsearch-1.4.1.jar"/>
-    <library name="lucene-analyzers-common-4.10.2.jar"/>
-    <library name="lucene-codecs-4.10.2.jar"/>
-    <library name="lucene-core-4.10.2.jar"/>
-    <library name="lucene-grouping-4.10.2.jar"/>
-    <library name="lucene-highlighter-4.10.2.jar"/>
-    <library name="lucene-join-4.10.2.jar"/>
-    <library name="lucene-memory-4.10.2.jar"/>
-    <library name="lucene-misc-4.10.2.jar"/>
-    <library name="lucene-queries-4.10.2.jar"/>
-    <library name="lucene-queryparser-4.10.2.jar"/>
-    <library name="lucene-sandbox-4.10.2.jar"/>
-    <library name="lucene-spatial-4.10.2.jar"/>
-    <library name="lucene-suggest-4.10.2.jar"/>
-    <library name="spatial4j-0.4.1.jar"/>
-    <library name="antlr-runtime-3.5.jar"/>
-    <library name="asm-4.1"/>
-    <library name="asm-commons-4.1.jar"/>
-  </runtime>
+    <runtime>
+        <library name="indexer-multielastic2.jar">
+            <export name="*"/>
+        </library>
 
-  <requires>
-    <import plugin="nutch-extensionpoints" />
-    <import plugin="lib-vk"/>
-  </requires>
+        <library name="elasticsearch-2.1.0.jar"/>
+        <library name="jackson-core-2.6.2.jar"/>
+        <library name="lucene-core-5.3.1.jar"/>
+        <library name="jackson-dataformat-smile-2.6.2.jar"/>
+        <library name="jackson-dataformat-yaml-2.6.2.jar"/>
+        <library name="jackson-dataformat-cbor-2.6.2.jar"/>
+        <library name="netty-3.10.5.Final.jar"/>
+        <library name="compress-lzf-1.0.2.jar"/>
+        <library name="t-digest-3.0.jar"/>
+        <library name="HdrHistogram-2.1.6.jar"/>
+        <library name="commons-cli-1.3.1.jar"/>
+        <library name="jsr166e-1.1.0.jar"/>
+        <library name="lucene-sandbox-5.3.1.jar"/>
+        <library name="lucene-backward-codecs-5.3.1.jar"/>
+        <library name="lucene-misc-5.3.1.jar"/>
+        <library name="lucene-analyzers-common-5.3.1.jar"/>
+        <library name="lucene-grouping-5.3.1.jar"/>
+        <library name="lucene-queries-5.3.1.jar"/>
+        <library name="lucene-spatial3d-5.3.1.jar"/>
+        <library name="spatial4j-0.4.1.jar"/>
+        <library name="snakeyaml-1.15.jar"/>
+        <library name="lucene-memory-5.3.1.jar"/>
+        <library name="lucene-highlighter-5.3.1.jar"/>
+        <library name="lucene-queryparser-5.3.1.jar"/>
+        <library name="lucene-suggest-5.3.1.jar"/>
+        <library name="lucene-join-5.3.1.jar"/>
+        <library name="lucene-spatial-5.3.1.jar"/>
+        <library name="guava-18.0.jar"/>
+        <library name="hppc-0.7.1.jar"/>
+        <library name="joda-time-2.8.2.jar"/>
+        <library name="hamcrest-core-1.3.jar"/>
+        <library name="antlr-runtime-3.5.jar"/>
+        <library name="asm-4.1"/>
+        <library name="asm-commons-4.1.jar"/>
+    </runtime>
 
-  <extension id="org.apache.nutch.indexer.multielastic2"
-    name="Elasticsearch Index Writer supports multiple document for indexing"
-    point="org.apache.nutch.indexer.IndexWriter">
-    <implementation id="MultiElastic2IndexWriter"
-      class="org.apache.nutch.indexwriter.multielastic2.MultiElastic2IndexWriter" />
-  </extension>
+    <requires>
+        <import plugin="nutch-extensionpoints"/>
+        <import plugin="lib-vk"/>
+    </requires>
+
+    <extension id="org.apache.nutch.indexer.multielastic2"
+               name="Elasticsearch 2.x Index Writer supports multiple document for indexing"
+               point="org.apache.nutch.indexer.IndexWriter">
+        <implementation id="MultiElastic2IndexWriter"
+                        class="org.apache.nutch.indexwriter.multielastic2.MultiElastic2IndexWriter"/>
+    </extension>
 
 </plugin>
