--- a/plugins/indexer-multielastic2/pom.xml
+++ b/plugins/indexer-multielastic2/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>${elastic.version}</version>
+            <version>${es2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
