--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <slf4j.version>1.7.12</slf4j.version>
         <hadoop.version>2.7.1</hadoop.version>
         <nutch.version>1.10</nutch.version>
-        <elastic.version>1.4.1</elastic.version>
+        <es1.version>1.4.1</es1.version>
         <es2.version>2.1.0</es2.version>
         <httpclient.version>4.2.5</httpclient.version>
     </properties>
