Build files update to optimize dependencies.

--- a/plugins/lib-vk/ivy.xml
+++ b/plugins/lib-vk/ivy.xml
@@ -18,27 +18,29 @@
 -->
 
 <ivy-module version="1.0">
-  <info organisation="org.apache.nutch" module="${ant.project.name}">
-    <license name="Apache 2.0"/>
-    <ivyauthor name="Apache Nutch Team" url="http://nutch.apache.org"/>
-    <description>
-        Apache Nutch
-    </description>
-  </info>
+    <info organisation="org.apache.nutch" module="${ant.project.name}">
+        <license name="Apache 2.0"/>
+        <ivyauthor name="Apache Nutch Team" url="http://nutch.apache.org"/>
+        <description>
+            Apache Nutch
+        </description>
+    </info>
 
-  <configurations>
-    <include file="../../..//ivy/ivy-configurations.xml"/>
-  </configurations>
+    <configurations>
+        <include file="../../..//ivy/ivy-configurations.xml"/>
+    </configurations>
 
-  <publications>
-    <!--get the artifact from our module name-->
-    <artifact conf="master"/>
-  </publications>
+    <publications>
+        <!--get the artifact from our module name-->
+        <artifact conf="master"/>
+    </publications>
 
-  <dependencies>
-    <!-- begin gson dependencies -->
-    <dependency org="com.google.code.gson" name="gson" rev="2.4" />
-    <dependency org="org.springframework.social" name="spring-social-vkontakte" rev="1.1.0.BUILD-SNAPSHOT" />
-  </dependencies>
-  
+    <dependencies>
+        <!-- begin gson dependencies -->
+        <dependency org="com.google.code.gson" name="gson" rev="2.4"/>
+        <dependency org="org.springframework.social" name="spring-social-vkontakte" rev="1.1.0.BUILD-SNAPSHOT"/>
+        <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.2.5"/>
+        <dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.5.3" />
+    </dependencies>
+
 </ivy-module>
