--- a/plugins/lib-vk/plugin.xml
+++ b/plugins/lib-vk/plugin.xml
@@ -18,21 +18,30 @@
         <library name="spring-social-core-1.1.4.RELEASE.jar">
             <export name="*"/>
         </library>
-        <library name="spring-web-4.1.8.RELEASE.jar">
-            <export name="*"/>
-        </library>
         <library name="spring-core-4.1.8.RELEASE.jar">
-            <export name="*"/>
-        </library>
-        <library name="spring-beans-4.1.8.RELEASE.jar">
             <export name="*"/>
         </library>
         <library name="httpclient-4.2.5.jar">
             <export name="*"/>
         </library>
-        <library name="httpcore-4.2.4.jar">
+        <library name="jackson-databind-2.5.3.jar">
             <export name="*"/>
         </library>
     </runtime>
+
+    <requires>
+        <library name="spring-social-vkontakte-1.1.0.BUILD-SNAPSHOT.jar">
+            <export name="*"/>
+        </library>
+        <library name="gson-2.4.jar">
+            <export name="*"/>
+        </library>
+        <library name="httpclient-4.2.5.jar">
+            <export name="*"/>
+        </library>
+        <library name="jackson-databind-2.5.3.jar">
+            <export name="*"/>
+        </library>
+    </requires>
 
 </plugin>
