--- a/plugins/lib-vk/pom.xml
+++ b/plugins/lib-vk/pom.xml
@@ -18,10 +18,6 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <properties>
-        <gson.version>2.4</gson.version>
-    </properties>
-
     <repositories>
         <repository>
             <id>snapshots</id>
@@ -50,6 +46,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
