--- a/plugins/lib-vk/plugin.xml
+++ b/plugins/lib-vk/plugin.xml
@@ -24,7 +24,13 @@
         <library name="httpclient-4.2.5.jar">
             <export name="*"/>
         </library>
+        <library name="httpcore-4.2.4.jar">
+            <export name="*"/>
+        </library>
         <library name="jackson-databind-2.5.3.jar">
+            <export name="*"/>
+        </library>
+        <library name="multipage-0.0.1.jar">
             <export name="*"/>
         </library>
     </runtime>
