--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,7 @@
         <module>plugins/lib-vk</module>
         <module>plugins/parse-vk</module>
         <module>plugins/protocol-vk</module>
+        <module>multipage</module>
         <module>distribution</module>
     </modules>
 </project>
