--- a/plugins/indexer-multielastic2/ivy.xml
+++ b/plugins/indexer-multielastic2/ivy.xml
@@ -18,26 +18,27 @@
 -->
 
 <ivy-module version="1.0">
-  <info organisation="org.apache.nutch" module="${ant.project.name}">
-    <license name="Apache 2.0"/>
-    <ivyauthor name="Apache Nutch Team" url="http://nutch.apache.org"/>
-    <description>
-        Apache Nutch
-    </description>
-  </info>
+    <info organisation="org.apache.nutch" module="${ant.project.name}">
+        <license name="Apache 2.0"/>
+        <ivyauthor name="Apache Nutch Team" url="http://nutch.apache.org"/>
+        <description>
+            Apache Nutch
+        </description>
+    </info>
 
-  <configurations>
-    <include file="../../..//ivy/ivy-configurations.xml"/>
-  </configurations>
+    <configurations>
+        <include file="../../..//ivy/ivy-configurations.xml"/>
+    </configurations>
 
-  <publications>
-    <!--get the artifact from our module name-->
-    <artifact conf="master"/>
-  </publications>
+    <publications>
+        <!--get the artifact from our module name-->
+        <artifact conf="master"/>
+    </publications>
 
-  <dependencies>
+    <dependencies>
         <dependency org="org.elasticsearch" name="elasticsearch" rev="2.1.0"
                     conf="*->default"/>
-  </dependencies>
-  
+        <dependency org="ru.wobot" name="multipage" rev="0.0.1"/>
+    </dependencies>
+
 </ivy-module>
