--- a/plugins/lib-vk/ivy.xml
+++ b/plugins/lib-vk/ivy.xml
@@ -41,6 +41,7 @@
         <dependency org="org.springframework.social" name="spring-social-vkontakte" rev="1.1.0.BUILD-SNAPSHOT"/>
         <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.2.5"/>
         <dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.5.3" />
+        <dependency org="ru.wobot" name="multipage" rev="0.0.1"/>
     </dependencies>
 
 </ivy-module>
