--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
                     <dependency>
                         <groupId>ru.wobot</groupId>
                         <artifactId>distribution</artifactId>
-                        <version>0.0.1</version>
+                        <version>${project.version}</version>
                     </dependency>
                 </dependencies>
                 <configuration>
