--- a/smm-core/pom.xml
+++ b/smm-core/pom.xml
@@ -14,8 +14,7 @@
     <parent>
         <groupId>ru.wobot</groupId>
         <artifactId>wonutch-plugins</artifactId>
-        <version>0.0.1</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
