--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -10,4 +10,17 @@
     <description>
         Module to carry assembly descriptor for plugin artifacts
     </description>
+
+    <distributionManagement>
+        <repository>
+            <id>central</id>
+            <name>libs-release-local</name>
+            <url>http://artifactory.wobot.local/artifactory/libs-release-local</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>libs-snapshot-local</name>
+            <url>http://artifactory.wobot.local/artifactory/libs-snapshot-local</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
