[maven-release-plugin] prepare release release-0.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.wobot</groupId>
     <artifactId>wonutch-plugins</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>pom</packaging>
 
     <name>wonutch-plugins</name>
@@ -24,7 +22,7 @@
         <url>https://github.com/wobot-ru/wonutch-plugins</url>
         <connection>scm:git:git@github.com:wobot-ru/wonutch-plugins.git</connection>
         <developerConnection>scm:git:git@github.com:wobot-ru/wonutch-plugins.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>release-0.1.0</tag>
     </scm>
 
     <developers>
@@ -173,9 +171,9 @@
                         <configuration>
                             <target>
                                 <copy todir="${env.NUTCH_HOME}/plugins/${project.name}">
-                                    <fileset dir="${project.build.directory}/${project.name}" includes="**"/>
+                                    <fileset dir="${project.build.directory}/${project.name}" includes="**" />
                                 </copy>
-                                <delete dir="${env.NUTCH_HOME}/plugins/${project.parent.artifactId}"/>
+                                <delete dir="${env.NUTCH_HOME}/plugins/${project.parent.artifactId}" />
                             </target>
                         </configuration>
                     </execution>
