--- a/plugins/indexer-multielastic2/pom.xml
+++ b/plugins/indexer-multielastic2/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>ru.wobot</groupId>
         <artifactId>wonutch-plugins</artifactId>
-        <version>0.1.0</version>
+        <version>0.2.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
