Create common profile entity SMProfile. Extract interface SMService. Work on WB-32

--- a/plugins/lib-vk/pom.xml
+++ b/plugins/lib-vk/pom.xml
@@ -36,6 +36,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>ru.wobot</groupId>
+            <artifactId>smm-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
