--- a/plugins/lib-vk/plugin.xml
+++ b/plugins/lib-vk/plugin.xml
@@ -33,6 +33,9 @@
         <library name="multipage-0.0.1.jar">
             <export name="*"/>
         </library>
+        <library name="smm-core-0.2.0-SNAPSHOT.jar">
+            <export name="*"/>
+        </library>
     </runtime>
 
     <requires>
