--- a/plugins/protocol-vk/plugin.xml
+++ b/plugins/protocol-vk/plugin.xml
@@ -23,7 +23,7 @@
 
         <implementation id="org.apache.nutch.protocol.vk.Vk"
                         class="org.apache.nutch.protocol.vk.Vk">
-            <parameter name="protocolName" value="http"/>
+            <parameter name="protocolName" value="vk"/>
         </implementation>
     </extension>
 
