--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.4</version>
                 <configuration>
-                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <argLine>-Dfile.encoding=UTF-8 -Djava.protocol.handler.pkgs=ru.wobot.smm.protocols</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -216,6 +216,7 @@
         <module>plugins/protocol-vk</module>
         <module>multipage</module>
         <module>smm-core</module>
+        <module>smm-protocols</module>
         <module>distribution</module>
     </modules>
 </project>
