--- a/plugins/lib-vk/pom.xml
+++ b/plugins/lib-vk/pom.xml
@@ -58,10 +58,21 @@
             <artifactId>spring-social-vkontakte</artifactId>
             <version>1.1.0.BUILD-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${jodatime.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
         <sourceDirectory>src/java</sourceDirectory>
         <testSourceDirectory>src/test</testSourceDirectory>
+        <testResources>
+            <testResource>
+                <directory>src/testresources</directory>
+            </testResource>
+        </testResources>
+
     </build>
 </project>
