--- a/plugins/lib-vk/plugin.xml
+++ b/plugins/lib-vk/plugin.xml
@@ -18,6 +18,9 @@
         <library name="httpclient-4.3.6.jar">
             <export name="*"/>
         </library>
+        <library name="joda-time-2.9.1.jar">
+            <export name="*"/>
+        </library>
     </runtime>
 
     <requires>
