--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <junit.version>4.12</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
         <mockito.version>1.10.19</mockito.version>
+        <jodatime.version>2.9.1</jodatime.version>
         <slf4j.version>1.7.12</slf4j.version>
         <hadoop.version>2.7.1</hadoop.version>
         <nutch.version>1.10</nutch.version>
