--- a/smm-core/pom.xml
+++ b/smm-core/pom.xml
@@ -16,10 +16,20 @@
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${jodatime.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
         <sourceDirectory>src/java</sourceDirectory>
         <testSourceDirectory>src/test</testSourceDirectory>
+        <testResources>
+            <testResource>
+                <directory>src/testresources</directory>
+            </testResource>
+        </testResources>
     </build>
 </project>
