--- a/plugins/lib-vk/ivy.xml
+++ b/plugins/lib-vk/ivy.xml
@@ -38,10 +38,11 @@
     <dependencies>
         <!-- begin gson dependencies -->
         <dependency org="com.google.code.gson" name="gson" rev="2.4"/>
-        <dependency org="org.springframework.social" name="spring-social-vkontakte" rev="1.1.0.BUILD-SNAPSHOT"/>
+        <dependency org="org.springframework.social" name="spring-social-vkontakte" rev="1.1.0.RELEASE"/>
         <dependency org="org.apache.httpcomponents" name="httpclient" rev="4.2.5"/>
         <dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.5.3" />
-        <dependency org="ru.wobot" name="multipage" rev="0.0.1"/>
+        <dependency org="ru.wobot" name="multipage" rev="0.2.0-SNAPSHOT"/>
+        <dependency org="ru.wobot" name="smm-core" rev="0.2.0-SNAPSHOT"/>
     </dependencies>
 
 </ivy-module>
