Move UrlSchemaConstants to smm-core.

--- a/plugins/lib-vk/pom.xml
+++ b/plugins/lib-vk/pom.xml
@@ -39,6 +39,7 @@
             <groupId>ru.wobot</groupId>
             <artifactId>smm-protocols</artifactId>
             <version>${project.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>ru.wobot</groupId>
